--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,3 @@
-/* font-family: "Raleway", sans-serif;
-font-family: "Roboto", sans-serif; */
 
 body {
  font-family: "Roboto", sans-serif;
@@ -27,6 +25,10 @@ a {
 
 .header-logo .logo-part {
     color:#2E2F42;
+} 
+
+.footer-logo .logo-part {
+    color:#F4F4FD;
 } 
 
 .nav-link {
@@ -72,7 +74,7 @@ a {
 }
 
 .button {
-  cursor:pointer
+  cursor:pointer;
 
   display: inline-flex;
   padding: 16px 32px;
@@ -91,7 +93,7 @@ a {
 }
 
 .button:hover {
-  background-color:#404BBF);
+  background-color:#404BBF;
 }
 
 
@@ -119,3 +121,16 @@ a {
   line-height: 40px; 
   letter-spacing: 0.72px;
 }
+
+.page-footer {
+  background-color:#2E2F42;
+}
+
+.footer-text {
+  color:#F4F4FD;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.32px; 
+}
+ 
