--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@
 body {
  font-family: "Roboto", sans-serif;
  color: #434455;
- background-color:#fff;
+ background-color:#FFFF;
 }
 
 ul,ol {
@@ -65,11 +65,11 @@ a {
 }
 
 .heading-hero-section {
-  color:#fff;
+  color:#FFFF;
   text-align: center;
   font-size: 56px;
   font-weight: 700;
-  line-height: 1.07px; 
+  line-height: 1.07; 
   letter-spacing: 1.12px;
 }
 
@@ -86,6 +86,7 @@ a {
   box-shadow:0 4px 4px 0;
 
   color: #FFF;;
+  font-family: inherit
   font-size: 16px;
   font-weight: 500;
   line-height: 24px; 
@@ -97,12 +98,15 @@ a {
 }
 
 
-.heading-03 {
+.heading-three {
   color:#2E2F42;
   font-size: 20px;
   font-weight: 500;
   line-height: 24px; 
   letter-spacing: 0.4px;
+}
+.our-team {
+  background-color: #F4F4FD  ;
 }
 .features-item p,
 .our-team-member p,
@@ -111,14 +115,17 @@ a {
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.32px;
+  text-transform: capitalize 
 }
-
-.heading-02 {
+.our-team-list {
+  background-color: #FFFFFF;
+}
+.heading-two {
   color:#2E2F42;
   text-align: center;
   font-size: 36px;
   font-weight: 700;
-  line-height: 40px; 
+  line-height: 1.11; 
   letter-spacing: 0.72px;
 }
 
