--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ a {
   background-color:#F4F4FD;
 }
 
-.our-team-text our-team-bg {
+.our-team-member {
   background-color: #FFFFFF ;
 }
 .features-text,
